--- a/src/frontend/styles/variables.css
+++ b/src/frontend/styles/variables.css
@@ -3,4 +3,12 @@
 	--bordCinza: rgb(223, 223, 223);
 	--fundoAzul: #00bbff79;
     --sombraSuave: 3px 3px 6px rgba(0, 0, 0, 0.5);
+
+    --cor-borda-escuro: brown;
+    --cor-borda-claro: sandybrown;
+    --background-geral: rgba(0, 187, 255, 0.60);
+    --fundo-principal: wheat;
+    --fundo-secundario: rgb(200, 240, 255);
+    --cor-letra-escuro: brown;
+    --cor-letra-claro: wheat;
 }
