--- a/src/frontend/styles/default.css
+++ b/src/frontend/styles/default.css
@@ -1,14 +1,27 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 
 html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0; 
-	border: 0;
-	padding: 0;
-  
-  user-select: none;
-  scrollbar-width: none;
+    width: 100%;
+    height: 100%;
+    margin: 0; 
+    border: 0;
+    padding: 0;
+
+
+    user-select: none;
+    scrollbar-width: none;
 }
+
+html {
+    background-color: var(--background-geral);
+}
+
 h1, p, textarea  {
 	margin: 0;
 	padding: 0;
@@ -218,6 +231,13 @@ div#app {
     border-radius: 1em;
     background-color: rgb(255, 255, 255);
     box-shadow: var(--sombraSuave);
+  }
+
+  .soft-panel {
+    border-radius: 10px;
+    background-color: var(--fundo-principal-claro);
+    box-shadow: var(--sombraSuave);
+    padding: 6px;
   }
 
   .scroll-blue {    
